# pwease

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: check.yaml
src/: main.rs
